# vesti

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.zig  build.zig.zon  compile_commands.json  first.ves  foo.py  foo.tex  foo.ves  go.mod  main.go  peg_grammar.txt  shell.nix
AApproach/: README.md  aapproach.ves  bib.bib  first.lua  font.ves  step.lua
AApproach/AApproach/: aapproach.ves  before.jl  step.jl
AApproach/appendix/: aux-lemmas.ves  bochner-integral.ves  heat-kernel.ves  interpolation.ves  more-facts-white-noise.ves  multiple-distribs.ves  separable-measure-space.ves  sharp-maximal.ves  stochastic-fubini.ves  the-kernel.ves  uniqueness.ves
AApproach/chapter2/: bessel-potential-def.ves  solvability-pde.ves
AApproach/chapter3/: stochastic-banach.ves
AApproach/chapter4/: general-case.ves  particular-case.ves  relation.ves
AApproach/chapter5/: variable-coeff.ves
AApproach/chapter6/: proof.ves
AApproach/chapter7/: embeddings.ves
AApproach/chapter8/: non-explosion.ves  stochastic-integral.ves  white-noise.ves
Kindergarten_Volume2/: README.md  build.lua  build.py  kindergarten-vol2.ves  kindergarten.ist  references.bib  step.py
Kindergarten_Volume2/Bochner-Integral/: prologue.ves  section2.ves
Kindergarten_Volume2/Bochner-integral/: section1.ves
Kindergarten_Volume2/Chapter0/: section0-1.ves  section0-2.ves  section0-3.ves
Kindergarten_Volume2/Chapter1/: section1-1.ves  section1-2.ves  section1-2.ves~  section1-3.ves  section1-4.ves  section1-5.ves  section1-6.ves~
Kindergarten_Volume2/Chapter2/: section2-1.ves  section2-2.ves  section2-3.ves  section2-4.ves  section2-5.ves
Kindergarten_Volume2/Measure-Integration/: section2.ves  section3.ves  section4.ves  section5.ves
Kindergarten_Volume2/Settings/: settings.tex
Kindergarten_Volume2/Volume2/: build.lua  kindergarten-vol2.ves  references.bib
Manual/: before.jl  first.lua  first.py  font.ves  step.py  vesti_man.ves
ast/: ast_test.go
cmd/: init.go  root.go  run.go
example/: first.ves  main.ves  pycode.ves  tikz_with_pycode.ves
examples/: RCA_solution_header.tex  RCA_solution_header.ves  basicdoc.tex  basicdoc.ves  before.lua  ch1-example.tex  ch1-example.ves  complex_note_taking.tex  complex_note_taking.ves  crop_pdf.ves  example1.ves  first.jl  font.ves
lexer/: lexer.go  lexer_test.go
libs/: drapeau.c
libs/drapeau/: .gitignore  LICENSE  README.md  drapeau.c  drapeau.h
libs/lua-5.4.7/: README_VESTI
newlineHandler/: newlineHandler_test.go
parser/: parser.go  parser_test.go
src/: Codegen.zig  Compiler.zig  Config.zig  CowStr.zig  Diagnostic.zig  FileInfo.zig  Lexer.zig  Lua.zig  Parser.zig  Python.zig  ansi.zig  ast.zig  c.zig  codegen.rs  codegen.zig  commands.rs  commands.zig  commands.zlap  compile.rs  compile.zig  constants.rs  diagnostic.zig  diagonosis.zig  dyn_lib.zig  error_info.zig  exit_status.rs  experimental.zig  initialization.rs  io.h  jlscript.zig  location.rs  location.zig  luascript.zig  macros.rs  main.rs  main.zig  pyscript.zig  python.zig  run_script.zig  tests.zig  (+11 more)
src/ast/: ast.go
src/compile/: latex.rs  mod.rs  vesti.rs
src/error/: err_kind.rs  mod.rs  pretty_print.rs
src/experimental/: codegen.rs  mod.rs
src/julia/: Julia.zig  vesjulia.c  vesti.jl
src/lexer/: Lexer.zig  Token.zig  lexer.go  lexer_test.go  lexer_test.rs  macros.rs  mod.rs  newline_handler.rs  token.rs
src/location/: location.go
src/newlineHandler/: newlineHandler.go
src/parser/: Parser.zig  Preprocessor.zig  ast.rs  ast.zig  defkind.zig  macros.rs  maker.rs  mod.rs  parser.go  parser_test.go  parser_test.rs
src/python/: mod.rs  vesti.py
src/tectonic/: else.zig  macos.zig
src/token/: token.go  tokenStringify.go
src/vestiError/: prettyPrint.go  vestiError.go
syntax/: vesti-mode.el  vesti.vim
syntax/emacs/: poly-vesti.el  vesti-mode.el  vesti-ts-mode.el
test/: main.zig
test/lexer/: lexer_test.zig
test/parser/: parser_test.zig
token/: token.go
uucode/: uucode_config.zig
vesti-tectonic/: Cargo.toml
vesti-tectonic/.cargo/: config.toml
vesti-tectonic/src/: lib.rs
vestiError/: prettyPrint.go  vestiError.go
(+41 files in other folders)
