[package]
name = "vesti"
version = "0.11.5"
authors = ["Sungbae Jeong <almagest0328@gmail.com>"]
description = "A preprocessor that compiles into LaTeX"
repository = "https://github.com/e0328eric/vesti.git"
license = "MIT"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = "abort"
strip = true

[features]
default = []
tectonic-backend = ["tectonic"]

[dependencies]
base64ct = { version = "1.6.0", features = ["alloc"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.27.0"
unicode-width = "0.1"
walkdir = "2.4"
yaml-rust = "0.4"
md-5 = "0.10.6"
dirs = "5.0.1"
pathdiff = "0.2.1"
path-slash = "0.2.1"
tectonic = { version = "0.15.0", optional = true, features = [
  "external-harfbuzz",
] }
