[package]
name = "vesti"
version = "0.15.0"
authors = ["Sungbae Jeong <almagest0328@gmail.com>"]
description = "A preprocessor that compiles into LaTeX"
repository = "https://github.com/e0328eric/vesti.git"
license = "MIT"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = "abort"
strip = true

[features]
default = []
tectonic-backend = ["tectonic"]

[dependencies]
base64ct = { version = "1.6.0", features = ["alloc"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
unicode-width = "0.2"
walkdir = "2.5"
yaml-rust = "0.4.5"
md-5 = "0.10.6"
dirs = "5.0.1"
pathdiff = "0.2"
path-slash = "0.2.1"
libc = "0.2"
tectonic = { version = "0.15.0", optional = true, features = [
  "external-harfbuzz",
] }
ron = "0.8.1"
serde = { version = "1.0.214", features = ["derive"] }
rustpython-vm = "0.4.0"
rustpython = "0.4.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = ["Win32_UI_WindowsAndMessaging"] }
